--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "autoprefixer": "^10.2.6",
     "eslint": "^7.29.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-config-next": "^11.0.0",
     "eslint-config-prettier": "^8.3.0",
     "husky": "^6.0.0",
     "postcss": "^8.2.13",
