--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "gsap": "^3.7.0",
     "next": "11.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
