--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "gsap": "^3.7.0",
+    "locomotive-scroll": "^4.1.1",
     "next": "11.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
