--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "locomotive-scroll": "^4.1.1",
     "next": "11.0.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.35.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
