--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "next-lint": "next lint",
     "prettier-quick": "pretty-quick --staged",
+    "lint-fix": "eslint --fix src/**/*.{js,jsx} src/pages/**/*.{js,jsx}",
     "check-format": "prettier --check src/**/*.{js,jsx} src/pages/**/*.{js,jsx}",
     "format": "prettier --write src/**/*.{js,jsx} src/pages/**/*.{js,jsx}",
-    "lint-fix": "eslint --fix src/**/*.{js,jsx} src/pages/**/*.{js,jsx}",
     "check-lint": "eslint --ext js --ext jsx src/**/*.{js,jsx} src/pages/**/*.{js,jsx}",
-    "test-all-and-build": "npm run lint-fix && npm run check-format && npm run check-lint && npm run build",
+    "test-all-and-build": "npm run next-lint && npm run prettier-quick && npm run lint-fix && npm run format && npm run check-format && npm run check-lint && npm run build",
     "prepare": "husky install"
   },
   "dependencies": {
