--- a/.prettierignore
+++ b/.prettierignore
@@ -1,10 +1,3 @@
-# Ignore artifacts:
-
-coverage
-
-# Ignore all HTML files:
-*.html
-
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
@@ -40,5 +33,6 @@ yarn-error.log*
 # vercel
 .vercel
 
-#vscode
-.vscode
+
+#cache
+.eslintcache
