--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "build": "next build",
     "start": "next start",
     "next-lint": "next lint",
-    "prettier-quick": "pretty-quick --staged",
-    "lint-fix": "eslint --fix src/**/*.{js,jsx} src/pages/**/*.{js,jsx}",
-    "check-format": "prettier --check src/**/*.{js,jsx} src/pages/**/*.{js,jsx}",
-    "format": "prettier --write src/**/*.{js,jsx} src/pages/**/*.{js,jsx}",
-    "check-lint": "eslint --ext js --ext jsx src/**/*.{js,jsx} src/pages/**/*.{js,jsx}",
-    "test-all-and-build": "npm run next-lint && npm run prettier-quick && npm run lint-fix && npm run format && npm run check-format && npm run check-lint && npm run build",
+    "lint-fix": "eslint --cache --fix .",
+    "prettier-format": "prettier --write .",
+    "check-prettier-format": "prettier --check .",
+    "check-lint": "eslint .",
+    "test-all-and-build": "npm run next-lint && npm run check-lint && npm run check-prettier-format && npm run build",
     "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.{js,jsx}": "npm run lint-fix",
+    "*.{js,jsx,css,scss,md}": "npm run prettier-format"
   },
   "dependencies": {
     "gsap": "^3.7.0",
@@ -29,10 +32,11 @@
     "eslint-config-google": "^0.14.0",
     "eslint-config-next": "^11.0.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-tailwindcss": "^1.13.4",
     "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
     "postcss": "^8.2.13",
     "prettier": "^2.3.1",
-    "pretty-quick": "^3.1.1",
     "tailwindcss": "^2.2.2"
   }
 }
