--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,5 +2,5 @@
   "compilerOptions": {
     "baseUrl": "./src/"
   },
-  "exclude": ["./node_modules", "**/node_modules/*", "./.next"]
+  "exclude": ["node_modules", ".next"]
 }
