--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gsap": "^3.7.0",
     "locomotive-scroll": "^4.1.1",
     "next": "11.0.0",
+    "next-pwa": "^5.2.21",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.35.1"
