--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-config-next": "^11.0.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-tailwindcss": "^1.13.4",
     "husky": "^6.0.0",
